--- a/css/main.css
+++ b/css/main.css
@@ -1052,6 +1052,11 @@ background-image: url("../images/services/svc-bg.JPG");
 	margin-top: 15px;
 }
 
+.blog-subheading{
+	margin-bottom: 35px;
+	margin-top: 15px;
+	color:#fc7700;
+}
 .single-blog {
 	margin-bottom: 30px;
 	background-color:#F7F7F7;
