--- a/css/main.css
+++ b/css/main.css
@@ -659,6 +659,14 @@ background-image: url("../images/services/svc-bg.JPG");
 	-ms-transform: scale(1.1) rotate(360deg);
 	transform: scale(1.1) rotate(360deg);
 }
+.single-service:hover img {
+	color:#fc7700;
+	-moz-transform: scale(1.1) rotate(360deg);
+	-webkit-transform: scale(1.1) rotate(360deg);
+	-o-transform: scale(1.1) rotate(360deg);
+	-ms-transform: scale(1.1) rotate(360deg);
+	transform: scale(1.1) rotate(360deg);
+}
 
 
 /*=====================
@@ -694,6 +702,7 @@ background-image: url("../images/services/svc-bg.JPG");
 	padding: 25px;
 	text-align:center;
 	overflow:hidden;
+	overflow-y:auto;
 }
 
 .single-member img {
@@ -1535,4 +1544,13 @@ background-image: url("../images/services/svc-bg.JPG");
    -ms-filter: "progid: DXImageTransform.Microsoft.Alpha(Opacity=100)";
    filter: alpha(opacity=100);
    opacity: 1;
+}
+.service-image {
+  border-radius: 50%;
+  -webkit-transition: -webkit-transform .8s ease-in-out;
+          transition:         transform .8s ease-in-out;
+}
+.service-image:hover {
+  -webkit-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
